# Tarea2_D2

./: CMakeLists.txt  LICENSE  README.md  main.cpp
Algoritmos/: AllSortedLinkedList.cpp  BST.cpp  SelectionSort.cpp  bubbleSort.cpp  mergeSort.cpp
Graficas/: graficas.h
includeAlg/: AllSortedLinkedList.h  algoritmos.h
